--- a/cssbattle/181/main.css
+++ b/cssbattle/181/main.css
@@ -3,10 +3,51 @@
   padding: 0;
   box-sizing: border-box;
 }
-
-body {
-  height: 100vh;
+.container {
+  width: 400px;
+  height: 300px;
+  background: #de3832;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.upper {
+  display: flex;
+  justify-content: space-between;
+}
+.lower {
+  display: flex;
+  justify-content: space-between;
+}
+.top-left {
+  width: 125px;
+  aspect-ratio: 1/1;
+  background: #33499f;
+  border-width: 0 15px 15px 0;
+  border-color: #fff;
+  border-style: solid;
+}
+.top-right {
+  width: 225px;
+  aspect-ratio: 2/1;
+  background: #33499f;
+  border-width: 0 0 15px 15px;
+  border-color: #fff;
+  border-style: solid;
+}
+.bottom-left {
+  width: 125px;
+  aspect-ratio: 1/1;
+  background: #33499f;
+  border-width: 15px 15px 0 0;
+  border-color: #fff;
+  border-style: solid;
+}
+.bottom-right {
+  width: 225px;
+  aspect-ratio: 2/1;
+  background: #33499f;
+  border-width: 15px 0 0 15px;
+  border-color: #fff;
+  border-style: solid;
 }
