--- a/cssbattle/214/main.css
+++ b/cssbattle/214/main.css
@@ -1,59 +1,54 @@
- * {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
-body {
-  height: 100vh;
+.container {
+  width: 400px;
+  height: 300px;
+  background: #f8f8f8;
+  border: 1px solid #000;
+  padding: 20px 30px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #ddd;
+  flex-direction: column;
+  gap: 10px;
 }
+.r1 {
+  display: flex;
+  justify-content: space-between;
 
-.layout {
-  width: 800px;
+}
+.r2 {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
-
-.top-boxes {
+.r3 {
   display: flex;
-  justify-content: space-between;
-}
+  gap:10px
 
-.top-boxes div {
-  width: 80px;
-  height: 80px;
-  background: #7a7a85;
 }
-
+.rect {
+  width: 40px;
+  height: 50px;
+  background: #787885;
+}
 .line {
-  height: 20px;
-  background: #7a7a85;
+  width: 100%;
+  height: 10px;
+  background: #787885;
 }
-
-.middle {
-  display: flex;
-  justify-content: space-between;
-}
-
-.side {
+.cascade {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 10px;
 }
-
-.side div {
-  width: 150px;
-  height: 20px;
-  background: #7a7a85;
+.shortLine {
+  width: 75px;
+  height: 10px;
+  background: #787885;
 }
-
-.center-box {
-  width: 350px;
-  height: 300px;
-  background: #7a7a85;
+.square {
+  background: #787885;
+  flex-grow: 1;
 }
